// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Get All Post Controller Snapshot Test for author not found. 1`] = `
{
  "body": {
    "message": "User not found.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Get All Post Controller Snapshot Test for internal server error. 1`] = `
{
  "body": {
    "message": "Something went wrong. Please try again later.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Get All Post Controller Snapshot Test for not valid user Id. 1`] = `
{
  "body": {
    "message": "Invalid user ID.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Get All Post Controller Snapshot Test for page exceeds total pages. 1`] = `
{
  "body": {
    "message": "Requested page not found. Page number exceeds total pages.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Get All Post Controller Snapshot Test for post article found successfully. 1`] = `
{
  "body": {
    "data": {
      "currentPage": 1,
      "data": [
        {
          "_id": "69a8652b69726b384c21b27d",
          "author": "507f1f77bcf86cd799439011",
          "comments": 12,
          "createdAt": "2026-03-04T17:00:19.599Z",
          "deletedAt": null,
          "description": "postDescription",
          "isPinned": false,
          "isTrashed": false,
          "likes": 924,
          "title": "postTitle",
          "updatedAt": "2026-03-04T17:00:19.599Z",
        },
      ],
      "totalDocument": 1,
      "totalPages": 1,
    },
    "message": "Articles fetched successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Get All Post Controller Snapshot Test for post article not found. 1`] = `
{
  "body": {
    "data": {
      "currentPage": 1,
      "data": [],
      "totalDocument": 0,
      "totalPages": 1,
    },
    "message": "Articles fetched successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Get All Post Controller Snapshot Test for user Id not found. 1`] = `
{
  "body": {
    "message": "User ID not found.",
    "success": false,
  },
  "status": 404,
}
`;
